syntax = "proto3";

package raftrpc;

service Raft {
    // Invoked by candidate gather votes.
    rpc RequestVote (RequestVoteArgs) returns (RequestVoteReply);

    // Invoked by leader to replicate log entries, also used as heartbeat.
    // Do a total-order broadcast.
    rpc AppendEntries (AppendEntriesArgs) returns (AppendEntriesReply);
}

message RequestVoteArgs {
    uint64 term = 1;
    uint64 candidate_id = 2;
    uint64 last_log_index = 3;
    uint64 last_log_term = 4;
}

message RequestVoteReply {
    uint64 term = 1;
    bool vote_granted = 2;
}

message AppendEntriesArgs {
}

message AppendEntriesReply {
}